--- a/src/app/admin/brand/brand.component.html
+++ b/src/app/admin/brand/brand.component.html
@@ -5,10 +5,10 @@
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 data-table">
 
     <!-- Brand_id Column -->
-    <ng-container matColumnDef="brand_id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>
-      <td mat-cell *matCellDef="let element"> {{element.brand_id}} </td>
-    </ng-container>
+    <!--<ng-container matColumnDef="id">-->
+      <!--<th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>-->
+      <!--<td mat-cell *matCellDef="let element"> {{element.id}} </td>-->
+    <!--</ng-container>-->
 
     <!-- Brand_name Column -->
     <ng-container matColumnDef="brand_name">
@@ -16,17 +16,11 @@
       <td mat-cell *matCellDef="let element"> {{element.brand_name}} </td>
     </ng-container>
 
-    <!-- Brand_description Column -->
-    <ng-container matColumnDef="brand_description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-      <td mat-cell *matCellDef="let element"> {{element.brand_description}} </td>
-    </ng-container>
-
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions</th>
       <td mat-cell *matCellDef="let element">
-        <i class="material-icons" style="cursor: pointer" matTooltipPosition="above" matTooltip="Edit Operation" (click)="editBlog(element.brand_id)">edit</i>
-        <i class="material-icons" style="cursor: pointer" matTooltipPosition="below" matTooltip="Delete Operation" (click)="deleteBlog(element.brand_id)">close</i>
+        <i class="material-icons" style="cursor: pointer" matTooltipPosition="above" matTooltip="Edit Operation" (click)="editBlog(element.id)">edit</i>
+        <i class="material-icons" style="cursor: pointer" matTooltipPosition="below" matTooltip="Delete Operation" (click)="deleteBlog(element.id)">close</i>
       </td>
     </ng-container>
 
