--- a/src/app/admin/brand/brand.component.html
+++ b/src/app/admin/brand/brand.component.html
@@ -2,13 +2,7 @@
   <button mat-fab color="accent" type="button" (click)="openDialog()"><mat-icon>add</mat-icon></button>
   <!--<app-data-table></app-data-table>-->
 
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 data-table">
-
-    <!-- Brand_id Column -->
-    <!--<ng-container matColumnDef="id">-->
-      <!--<th mat-header-cell *matHeaderCellDef mat-sort-header> Id. </th>-->
-      <!--<td mat-cell *matCellDef="let element"> {{element.id}} </td>-->
-    <!--</ng-container>-->
+  <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" class="mat-elevation-z8 data-table">
 
     <!-- Brand_name Column -->
     <ng-container matColumnDef="brand_name">
@@ -19,8 +13,8 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions</th>
       <td mat-cell *matCellDef="let element">
-        <i class="material-icons" style="cursor: pointer" matTooltipPosition="above" matTooltip="Edit Operation" (click)="editBlog(element.id)">edit</i>
-        <i class="material-icons" style="cursor: pointer" matTooltipPosition="below" matTooltip="Delete Operation" (click)="deleteBlog(element.id)">close</i>
+        <i class="material-icons" style="cursor: pointer" matTooltipPosition="above" matTooltip="Edit" (click)="editBlog(element.id)">edit</i>
+        <i class="material-icons" style="cursor: pointer" matTooltipPosition="below" matTooltip="Delete" (click)="deleteBlog(element.id)">close</i>
       </td>
     </ng-container>
 
