--- a/src/app/admin/brand/brand.component.html
+++ b/src/app/admin/brand/brand.component.html
@@ -13,8 +13,8 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions</th>
       <td mat-cell *matCellDef="let element">
-        <i class="material-icons" style="cursor: pointer" matTooltipPosition="above" matTooltip="Edit" (click)="editBlog(element.id)">edit</i>
-        <i class="material-icons" style="cursor: pointer" matTooltipPosition="below" matTooltip="Delete" (click)="deleteBlog(element.id)">close</i>
+        <i class="material-icons" style="cursor: pointer" matTooltipPosition="above" matTooltip="Edit" (click)="editBrand(element.id)">edit</i>
+        <i class="material-icons" style="cursor: pointer" matTooltipPosition="below" matTooltip="Delete" (click)="deleteBrand(element.id)">close</i>
       </td>
     </ng-container>
 
