--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -1,3 +1,72 @@
 <div>
   <button mat-fab type="button" (click)="openDialog()"><mat-icon>add</mat-icon></button>
+
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 data-table">
+
+    <!-- Brand_name Column -->
+    <ng-container matColumnDef="category_id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
+      <td mat-cell *matCellDef="let element"> {{element.category_id}} </td>
+    </ng-container>
+
+    <!-- Brand_name Column -->
+    <ng-container matColumnDef="brand_id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Brand </th>
+      <td mat-cell *matCellDef="let element"> {{element.brand_id}} </td>
+    </ng-container>
+
+    <!-- Brand_name Column -->
+    <ng-container matColumnDef="product_name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.product_name}} </td>
+    </ng-container>
+
+    <!-- Brand_name Column -->
+    <ng-container matColumnDef="product_description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.product_description}} </td>
+    </ng-container>
+
+    <!-- Brand_name Column -->
+    <ng-container matColumnDef="product_qty">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Qty </th>
+      <td mat-cell *matCellDef="let element"> {{element.product_qty}} </td>
+    </ng-container>
+
+    <!-- Brand_name Column -->
+    <ng-container matColumnDef="product_price">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+      <td mat-cell *matCellDef="let element"> {{element.product_price}} </td>
+    </ng-container>
+
+    <!-- Brand_name Column -->
+    <ng-container matColumnDef="product_images">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Images </th>
+      <td mat-cell *matCellDef="let element"> {{element.product_images}} </td>
+    </ng-container>
+
+    <!-- Brand_name Column -->
+    <ng-container matColumnDef="isDeleted">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Deleted </th>
+      <td mat-cell *matCellDef="let element">{{element.isDeleted}} {{element.isDeleted === 0 ? 'Not' : 'Yes'}} </td>
+    </ng-container>
+
+    <!-- Brand_name Column -->
+    <ng-container matColumnDef="issoldout">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Sold Out </th>
+      <td mat-cell *matCellDef="let element"> {{element.issoldout}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions</th>
+      <td mat-cell *matCellDef="let element">
+        <i class="material-icons" style="cursor: pointer" matTooltipPosition="above" matTooltip="Edit">edit</i>
+        <i class="material-icons" style="cursor: pointer" matTooltipPosition="below" matTooltip="Delete" (click)="deleteProduct(element.id)">close</i>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator (page)="changePage($event)" [pageSizeOptions]="[5, 10, 20]" [length]="len" [pageSize]="5" [pageIndex]="0"></mat-paginator>
 </div>
