--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -1,7 +1,7 @@
 <div>
   <button mat-fab type="button" (click)="openDialog()"><mat-icon>add</mat-icon></button>
 
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 data-table">
+  <table mat-table [dataSource]="dataSource" (matSortChange)="sortchange($event)" matSort class="mat-elevation-z8 data-table">
 
     <!-- Brand_name Column -->
     <ng-container matColumnDef="category_id">
@@ -42,13 +42,15 @@
     <!-- Brand_name Column -->
     <ng-container matColumnDef="product_images">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Images </th>
-      <td mat-cell *matCellDef="let element"> {{element.product_images}} </td>
+      <td mat-cell *matCellDef="let element">
+        <img [src]="'http://192.168.200.153:4040/images/' + element.product_images" [alt]="element.product_images" height="100px" width="100px">
+      </td>
     </ng-container>
 
     <!-- Brand_name Column -->
     <ng-container matColumnDef="isDeleted">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Deleted </th>
-      <td mat-cell *matCellDef="let element">{{element.isDeleted}} {{element.isDeleted === 0 ? 'Not' : 'Yes'}} </td>
+      <td mat-cell *matCellDef="let element">{{element.isDeleted}} - {{element.isDeleted === 0 ? 'Not' : 'Yes'}} </td>
     </ng-container>
 
     <!-- Brand_name Column -->
