--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -43,7 +43,7 @@
     <ng-container matColumnDef="product_images">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Images </th>
       <td mat-cell *matCellDef="let element">
-        <img [src]="'http://192.168.200.153:4040/images/' + element.product_images" [alt]="element.product_images" height="100px" width="100px">
+        <img [src]="'http://192.168.200.153:4040/images/' + element.product_images" height="100px" width="100px">
       </td>
     </ng-container>
 
@@ -62,7 +62,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions</th>
       <td mat-cell *matCellDef="let element">
-        <i class="material-icons" style="cursor: pointer" matTooltipPosition="above" matTooltip="Edit">edit</i>
+        <i class="material-icons" style="cursor: pointer" matTooltipPosition="above" matTooltip="Edit" (click)="editProduct(element.id)">edit</i>
         <i class="material-icons" style="cursor: pointer" matTooltipPosition="below" matTooltip="Delete" (click)="deleteProduct(element.id)">close</i>
       </td>
     </ng-container>
