Set the environment variable, remove some bugs, manage error handling for incorrect login details.

--- a/src/app/admin/brand/brand.component.html
+++ b/src/app/admin/brand/brand.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button mat-fab color="accent" type="button" (click)="openDialog()"><mat-icon>add</mat-icon></button>
+  <button mat-fab color="accent" type="button" class="zindex_class" (click)="openDialog()"><mat-icon>add</mat-icon></button>
   <!--<app-data-table></app-data-table>-->
 
   <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" class="mat-elevation-z8 data-table">
