--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button mat-fab type="button" (click)="openDialog()"><mat-icon>add</mat-icon></button>
+  <button mat-fab type="button" class="zindex_class" (click)="openDialog()"><mat-icon>add</mat-icon></button>
 
   <table mat-table [dataSource]="dataSource" (matSortChange)="sortchange($event)" matSort class="mat-elevation-z8 data-table">
 
@@ -43,7 +43,7 @@
     <ng-container matColumnDef="product_images">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Images </th>
       <td mat-cell *matCellDef="let element">
-        <img [src]="'http://192.168.200.153:4040/images/' + element.product_images" height="100px" width="100px">
+        <img [src]="imageUrl+'/images/' + element.product_images" height="100px" width="100px">
       </td>
     </ng-container>
 
