--- a/src/app/admin/main-nav/main-nav.component.html
+++ b/src/app/admin/main-nav/main-nav.component.html
@@ -16,7 +16,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar color="primary" class="hideButton">
       <button
         type="button"
         aria-label="Toggle sidenav"
