Start making the UI for the client-side (image slider, display single product on page etc.).

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<mat-grid-list cols="4" rowHeight="100px">
+<mat-grid-list cols="1" rowHeight="250px">
   <mat-grid-tile>
-    grid-1
+    <img src="../images/1.jpg" alt="" height="150px" width="630">
   </mat-grid-tile>
-  <mat-grid-tile>grid-2</mat-grid-tile>
-  <mat-grid-tile>grid-3</mat-grid-tile>
-  <mat-grid-tile>grid-4</mat-grid-tile>
+  <!--<mat-grid-tile>grid-2</mat-grid-tile>-->
+  <!--<mat-grid-tile>grid-3</mat-grid-tile>-->
+  <!--<mat-grid-tile>grid-4</mat-grid-tile>-->
 </mat-grid-list>
