--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,13 +2,13 @@
   <mat-grid-tile>
     <img [src]="'src/app/images/' + imageValue" height="100%" width="100%">
   </mat-grid-tile>
-  <!--<mat-grid-tile>grid-3</mat-grid-tile>-->
-  <!--<mat-grid-tile>grid-4</mat-grid-tile>-->
 </mat-grid-list>
-<mat-grid-list cols="3" rowHeight="380px">
+<mat-grid-list cols="4" rowHeight="380px">
   <mat-grid-tile *ngFor="let data of randomData">
     <mat-card class="example-card">
-      <img mat-card-image [src]="imageUrl+'/images/' + data.product_images" [alt]="data.product_images">
+      <div>
+      <img mat-card-image (click)="visit(data.id)" [src]="imageUrl+'/images/' + data.product_images" [alt]="data.product_images">
+      </div>
       <mat-card-content>
         <p class="display-enter">
           {{data.product_name}}
@@ -16,11 +16,14 @@
         <p>Rs.
           {{data.product_price}}
         </p>
-        <p>
+        <p>Category :
           {{data.tblcategory.category_name}}
         </p>
 
       </mat-card-content>
+      <mat-card-actions>
+        <button mat-stroked-button color="primary" type="button" (click)="visit(data.id)" class="center-button">Visit to know more</button>
+      </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
 </mat-grid-list>
