--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -59,6 +59,12 @@
       <td mat-cell *matCellDef="let element"> {{element.issoldout}} </td>
     </ng-container>
 
+    <!-- isFeatureProduct Column -->
+    <ng-container matColumnDef="isFeatureProduct">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> IsFeartureProduct</th>
+      <td mat-cell *matCellDef="let element"> {{element.isFeatureProduct}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions</th>
       <td mat-cell *matCellDef="let element">
